--- a/src/component/Products/Product.css
+++ b/src/component/Products/Product.css
@@ -1,8 +1,37 @@
 .product{
     width: 300px;
     height: 510px;
+    border: 1px solid gray;
+    border-radius: 8px;
+    position: relative;
+    
 }
 .product img{
    height: 286px;
    width: 286px;
+   border-radius: 8px;
+   margin: 7px;
+}
+.product-info{
+    margin: 0 14px;
+}
+.product-info p{
+    margin-bottom: 0;
+    margin-top: 5px;
+}
+.product-name{
+    font-family: 'lato';
+    font-style: normal;
+    font-size: 21px;
+    font-weight: 400px;
+    line-height: 25px;
+    margin-top: 7px;
+}
+.btn-cart{
+    width: 100%;
+    background-color: coral;
+    border: none;
+    border-radius: 0px 0px 8px 8px;
+    position: absolute;
+    bottom: 0;
 }
